# wise_pointers

./: .gitignore  CMakeLists.txt  README.md  awarrptr_managed.h  awptr.h  awptr_managed.h  main.cpp  warrptr_managed.h  wmptr.h  wmptr_test_assignment.cpp  wmptr_test_constructor.cpp  wmptr_test_constructor_copy.cpp  wmptr_test_member_access.cpp  wmptr_test_reference.cpp  wmptr_test_setObject.cpp  wmptr_test_setOffset.cpp  wmptr_tests.cpp  wmptr_tests.h  wptr.h  wptr_accessor.h  wptr_accessor_chain.h  wptr_accessor_chain_test_access.cpp  wptr_accessor_chain_test_assignment.cpp  wptr_accessor_chain_test_constructor.cpp  wptr_accessor_chain_test_constructor_base_readable.cpp  wptr_accessor_chain_test_constructor_copy.cpp  wptr_accessor_chain_test_constructor_readable.cpp  wptr_accessor_chain_test_setAccessor.cpp  wptr_accessor_chain_tests.cpp  wptr_accessor_chain_tests.h  wptr_accessor_wrap.h  wptr_accessor_wrap_readable.h  wptr_accessor_wrap_test_access.cpp  wptr_accessor_wrap_test_assignment.cpp  wptr_accessor_wrap_test_comparison.cpp  wptr_accessor_wrap_test_constructor.cpp  wptr_accessor_wrap_test_constructor_base_readable.cpp  wptr_accessor_wrap_test_constructor_copy.cpp  wptr_accessor_wrap_test_constructor_readable.cpp  wptr_accessor_wrap_tests.cpp  (+120 more)
tests/: CMakeLists.txt  wptr_accessor_chain_tests.cpp  wptr_accessor_chain_tests.h  wptr_accessor_wrap_tests.cpp  wptr_accessor_wrap_tests.h  wptr_complex_tests.cpp  wptr_complex_tests.h  wptr_dereference_accessor_tests.h  wptr_inheritance_accessor_tests.h  wptr_inheritance_tests.cpp  wptr_inheritance_tests.h  wptr_itr_accessor_tests.cpp  wptr_itr_accessor_tests.h  wptr_itr_tests.cpp  wptr_itr_tests.h  wptr_managed_tests.cpp  wptr_managed_tests.h  wptr_no_accessor_tests.h  wptr_offset_accessor_tests.cpp  wptr_offset_accessor_tests.h  wptr_simple_tests.cpp  wptr_simple_tests.h  wptr_wrapped_tests.cpp  wptr_wrapped_tests.h
